<resources>
    <string name="app_name">CardShare</string>
    <string name="passHint">Senha</string>
    <string name="emailHint">Seu Email...</string>
    <string name="imgDescLogin">LoginPageLogo</string>
    <string name="login_btn_acess">Entrar</string>
    <string name="login_btn_reg">Não possui conta?Cadastre-se aqui!</string>
    <string name="action_search_menu">Pesquisar</string>
    <string name="action_configAccount">Configurar Conta</string>
    <string name="action_newCard">Novo Cartão</string>
    <string name="action_logout_menu">Sair</string>
    <string name="reg_btn_text">Cadastrar</string>
    <string name="reg_login_text">Já possui conta?</string>
    <string name="reg_pass_confirm">Confirmar Senha</string>
    <string name="login_tile">Login</string>
    <string name="register_title">Cadastrar novo usuário</string>
    <string name="setup_name_hint">Seu nome</string>
    <string name="setup_btn_text">Salvar Alterações</string>
    <string name="card_desc_hint">Nome...</string>
    <string name="card_desc_btn">Criar novo cartão</string>
    <string name="bottom_cards_btn">Meus Cartões</string>
    <string name="bottom_home_btn">Feed de Cartões</string>
    <string name="bottom_listcards_btn">Meus Contatos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_card_contact">Telefone...</string>
    <string name="newcard_text_cargo" >Cargo/Profissão...</string>
    <string name="newcard_text_email">Email...</string>
    <string name="newcard_text_endereco">Endereço...</string>
    <string name="dialog_titleCard">Opções do cartão</string>
    <string name="dialog_qrCode_text">Compartilhar via QRCode</string>
    <string name="dialog_btnShare_text">Compartilhar link</string>
    <string name="dialog_btnDelete_text">Apagar Cartão</string>
    <string name="newcard_description">Clique aqui para adicionar uma foto</string>
    <string name="setup_description_image">Clique para selecionar uma imagem.</string>
</resources>
