<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/main_card_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/card_user_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/list_cardprofile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/card_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="Nome"
                app:layout_constraintStart_toEndOf="@+id/card_user_image"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/card_user_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="Data "
                app:layout_constraintStart_toEndOf="@+id/card_user_image"
                app:layout_constraintTop_toBottomOf="@+id/card_user_name" />

            <ImageView
                android:id="@+id/card_image"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginTop="40dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_user_image"
                tools:srcCompat="@color/common_google_signin_btn_text_light_default" />

            <TextView
                android:id="@+id/card_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="28dp"
                android:text="Nome"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                app:layout_constraintStart_toStartOf="@+id/card_image"
                app:layout_constraintTop_toTopOf="@+id/card_image" />

            <TextView
                android:id="@+id/card_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="88dp"
                android:text="@string/new_card_contact"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                app:layout_constraintStart_toStartOf="@+id/card_image"
                app:layout_constraintTop_toTopOf="@+id/card_image" />

            <TextView
                android:id="@+id/card_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="120dp"
                android:text="@string/emailHint"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                app:layout_constraintStart_toStartOf="@+id/card_image"
                app:layout_constraintTop_toTopOf="@+id/card_image" />

            <TextView
                android:id="@+id/card_endereco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="152dp"
                android:text="@string/newcard_text_endereco"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                app:layout_constraintStart_toStartOf="@+id/card_image"
                app:layout_constraintTop_toTopOf="@+id/card_image" />

            <TextView
                android:id="@+id/card_cargo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="60dp"
                android:text="@string/newcard_text_cargo"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                app:layout_constraintStart_toStartOf="@+id/card_image"
                app:layout_constraintTop_toTopOf="@+id/card_image" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>